# applied-agents

./: .gitignore  Makefile  README-docs.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  generic_issue.md  stack_modification.md
.github/PULL_REQUEST_TEMPLATE/: docs_website_pr.md
data/: vector.sql
docs/: _config.yml  about.markdown  contributing.markdown  index.markdown
docs/_includes/: header_buttons_custom.html
iac/: app.py  cdk.json  pyproject.toml  regional_stack.py  root_env_stack.py  statemachine.asl.json
iac/analytics_stack/: analytics_stack.py
iac/config/: bucket_attributes.py
iac/context_stack/: context_stack.py
iac/data_stack/: data_stack.py
iac/database_stack/: database_stack.py
iac/inference_stack/: inference_stack.py
iac/knowledge_base_stack/: knowledge_base_stack.py
scripts/: build_lambda.sh  delete_all_versioned_s3_objects.sh
src/bedrock_interface/: bedrock_interface.py  pyproject.toml
src/lambda_loader/: lambda_loader.py  pyproject.toml
