[tool.poetry]
name = "applied-agents"
version = "0.0.1"
description = "AWS CDK infrastructure project for aapplied agents"
authors = ["Agent Team <agent_team@ai_alliance.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.8.0"}
boto3 = "^1.37.34"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
