[tool.poetry]
name = "analytics-agent"
version = "0.0.1"
description = "AWS CDK infrastructure project for an analytics agent"
authors = ["Agent Team <agent_team@ai_alliance.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.8.0"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"